--- a/tinymce-decorator.html
+++ b/tinymce-decorator.html
@@ -1,77 +1,96 @@
 <link rel="import" href="../polymer/polymer.html">
 <script type="text/javascript" src="../tinymce/tinymce.min.js"></script>
 
-<polymer-element name="tinymce-decorator" attributes="content_css baseUrl plugins menubar toolbar">
+<dom-module id="tinymce-decorator">
     <template>
         <content></content>
     </template>
-    <script>
-        Polymer('tinymce-decorator', {
-            /**
-             * @see tinymce config
-             */
-            content_css: null,
-            baseUrl: null,
-            plugins: '',
-            menubar: false,
-            toolbar: "bold italic title",
+</dom-module>
+<script>
+    Polymer({
+        is: 'tinymce-decorator',
 
-            /**
-             * Textarea where tinymce is instantiate
-             * @return {HTMLElement}
-             */
-            element: null,
-
-            /**
-             * DOMReady
-             */
-            ready: function() {
-                if (null !== this.baseUrl)
-                    tinyMCE.baseURL = this.baseUrl;
-
-                this.element = this.querySelector('textarea');
-                this._initTinyMCE();
+        /**
+         * @see tinymce config
+         */
+        properties: {
+            content_css: {
+                type: 'String',
+                value: null
             },
-
-            /**
-             * Init tinyMCE
-             * @private
-             */
-            _initTinyMCE: function () {
-                var that = this;
-                var config = {
-                    selector: '#' + this.element.id,
-                    plugins: this.plugins,
-                    menubar: this.menubar,
-                    toolbar: [this.toolbar],
-
-                    setup: function(editor) {
-                        editor.addButton('title', {
-                            title : 'Title',
-                            text: 'Title',
-                            image : false,
-                            onclick : function() {
-                                editor.execCommand('RemoveFormat', false, 'h3');
-                                editor.execCommand('FormatBlock', false, 'h3');
-                            }
-                        });
-
-                        editor.on('change', function(e) {
-                            that.element.value = editor.getContent();
-                        });
-
-                        editor.on('keyup', function(e) {
-                            that.element.value = editor.getContent();
-                        });
-                    }
-                };
-
-                if (this.content_css) {
-                    config.content_css = this.content_css;
-                }
-
-                tinymce.init(config);
+            baseUrl: {
+                type: 'String',
+                value: null
+            },
+            plugins: {
+                type: 'String',
+                value: ''
+            },
+            menubar: {
+                type: 'String',
+                value: ''
+            },
+            toolbar: {
+                type: 'Array',
+                value: ['bold italic title']
             }
-        });
-    </script>
-</polymer-element>
+        },
+
+        /**
+         * Textarea where tinymce is instantiate
+         * @return {HTMLElement}
+         */
+        element: null,
+
+        /**
+         * DOMReady
+         */
+        ready: function() {
+            if (null !== this.baseUrl)
+                tinyMCE.baseURL = this.baseUrl;
+
+            this.element = Polymer.dom(this).querySelector('textarea');
+            this._initTinyMCE();
+        },
+
+        /**
+         * Init tinyMCE
+         * @private
+         */
+        _initTinyMCE: function () {
+            var that = this;
+            var config = {
+                selector: '#' + this.element.id,
+                plugins: this.plugins,
+                menubar: this.menubar,
+                toolbar: this.toolbar,
+
+                setup: function(editor) {
+                    editor.addButton('title', {
+                        title : 'Title',
+                        text: 'Title',
+                        image : false,
+                        onclick : function() {
+                            editor.execCommand('RemoveFormat', false, 'h3');
+                            editor.execCommand('FormatBlock', false, 'h3');
+                        }
+                    });
+
+                    editor.on('change', function(e) {
+                        that.element.value = editor.getContent();
+                    });
+
+                    editor.on('keyup', function(e) {
+                        that.element.value = editor.getContent();
+                    });
+                }
+            };
+
+            if (this.content_css) {
+                config.content_css = this.content_css;
+            }
+
+            tinymce.init(config);
+        }
+    });
+</script>
