update polymer correction properties type

--- a/tinymce-decorator.html
+++ b/tinymce-decorator.html
@@ -15,23 +15,23 @@
          */
         properties: {
             content_css: {
-                type: 'String',
+                type: String,
                 value: null
             },
             baseUrl: {
-                type: 'String',
+                type: String,
                 value: null
             },
             plugins: {
-                type: 'String',
+                type: String,
                 value: ''
             },
             menubar: {
-                type: 'String',
+                type: String,
                 value: ''
             },
             toolbar: {
-                type: 'Array',
+                type: Array,
                 value: ['bold italic title']
             }
         },
