set state for title button

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,15 @@
     <h1><code>Tinymce with polymer</code> in action:</h1>
 
     <tinymce-decorator>
-        <textarea id="test"></textarea>
+        <textarea id="test" rows="22" cols="50">&lt;h3&gt;Starter Simon&lt;/h3&gt;
+&lt;p&gt;Smoked Shetland salmon tartare, pickled cucumber and radish salad&lt;br /&gt;&lt;br /&gt;Asparagus spears, quail eggs and Caesar dressing&lt;/p&gt;
+&lt;h3&gt;Dish&lt;/h3&gt;
+&lt;p&gt;Seared fillet of beef with barbeque sauce, spicy potato wedges, Mediterranean vegetables &lt;br /&gt;&lt;br /&gt; Penne pasta with red pepper pesto, basil and chilli sauce, courgette and piquillo&lt;/p&gt;
+&lt;h3&gt;Cheese&lt;/h3&gt;
+&lt;p&gt;Barber&amp;rsquo;s Cheddar and Somerset Camembert cheese served with quince jelly and biscuits&lt;/p&gt;
+&lt;h3&gt;Dessert&lt;/h3&gt;
+&lt;p&gt;Dark chocolate fondant with caramel centre and caramel sauce&lt;br /&gt;&lt;br /&gt;Vanilla and dulce de leche ice cream by The Ice Cream Union&lt;/p&gt;
+</textarea>
     </tinymce-decorator>
 </div>
 <script>
